--- a/src/pages/products/[slug].astro
+++ b/src/pages/products/[slug].astro
@@ -8,7 +8,10 @@ import Tabs from "@/functional-components/product/Tabs";
 import { VariantSelector } from "@/functional-components/product/VariantSelector";
 import SocialShare from "@/functional-components/SocialShare";
 import Base from "@/layouts/Base.astro";
-import { getProduct, getProductRecommendations } from "@/lib/shopify";
+import {
+  getProduct,
+  getProductRecommendations,
+} from "@/lib/shopify/index.mock";
 import type { CollectionEntry } from "astro:content";
 import { getEntry } from "astro:content";
 
@@ -17,7 +20,7 @@ const product = await getProduct(slug as string);
 
 const paymentSection = (await getEntry(
   "paymentSection",
-  "payments-and-delivery"
+  "payments-and-delivery",
 )) as CollectionEntry<"paymentSection">;
 const { payment_methods, estimated_delivery } = paymentSection.data;
 
@@ -121,7 +124,7 @@ const { currencySymbol } = config.shopify;
                     width={44}
                     height={32}
                   />
-                )
+                ),
               )
             }
           </div>
