--- a/src/layouts/components/Logo.astro
+++ b/src/layouts/components/Logo.astro
@@ -59,5 +59,6 @@ const { theme_switcher }: { theme_switcher: boolean } = config.settings;
     ) : (
       title
     )
-  }
+    }
+  {logo_text}
 </a>
