--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -8,7 +8,7 @@
 }
 
 .navbar-brand {
-  @apply text-xl font-semibold text-dark dark:text-darkmode-dark;
+  @apply text-2xl font-semibold text-dark dark:text-darkmode-dark;
   image {
     @apply max-h-full max-w-full;
   }
