change currency to VND

--- a/src/layouts/components/Price.astro
+++ b/src/layouts/components/Price.astro
@@ -2,7 +2,7 @@
 const {
   amount,
   className = "",
-  currencyCode = "USD",
+  currencyCode = "VND",
   currencyCodeClassName = "",
 } = Astro.props;
 
