add thousand separator on amount

--- a/src/layouts/components/FeaturedProducts.astro
+++ b/src/layouts/components/FeaturedProducts.astro
@@ -2,6 +2,7 @@
 import config from "@/config/config.json";
 import { AddToCart } from "@/functional-components/cart/AddToCart";
 import type { Product } from "@/lib/shopify/types";
+import { formatAmount } from "@/lib/utils"
 
 interface Props {
   products: Product[];
@@ -56,13 +57,13 @@ const { currencySymbol } = config.shopify;
             <div class="flex flex-wrap justify-center items-center gap-x-2 mt-2 md:mt-4">
               <span class="text-base md:text-xl font-bold text-dark dark:text-darkmode-dark">
                 {currencySymbol}
-                {priceRange.minVariantPrice.amount}
+                {formatAmount(priceRange.minVariantPrice.amount, compareAtPriceRange?.maxVariantPrice?.currencyCode)}
                 {compareAtPriceRange?.maxVariantPrice?.currencyCode}
               </span>
 
               {parseFloat(compareAtPriceRange?.maxVariantPrice.amount) > 0 && (
                 <s class="text-light dark:text-darkmode-light text-xs md:text-base font-medium">
-                  {currencySymbol} {compareAtPriceRange?.maxVariantPrice.amount}{" "}
+                  {currencySymbol} {formatAmount(compareAtPriceRange?.maxVariantPrice.amount, compareAtPriceRange?.maxVariantPrice?.currencyCode)}{" "}
                   {compareAtPriceRange?.maxVariantPrice?.currencyCode}
                 </s>
               )}
