--- a/src/pages/products/[slug].astro
+++ b/src/pages/products/[slug].astro
@@ -14,6 +14,7 @@ import {
 } from "@/lib/shopify/index.mock";
 import type { CollectionEntry } from "astro:content";
 import { getEntry } from "astro:content";
+import { formatAmount } from '@/lib/utils'
 
 const { slug } = Astro.params;
 const product = await getProduct(slug as string);
@@ -63,7 +64,7 @@ const { currencySymbol } = config.shopify;
           <div class="flex gap-2 items-center">
             <h4 class="text-light dark:text-darkmode-light max-md:h2">
               {currencySymbol}
-              {priceRange?.minVariantPrice.amount}{" "}
+              {formatAmount(priceRange?.minVariantPrice.amount, priceRange?.minVariantPrice?.currencyCode)}{" "}
               {priceRange?.minVariantPrice?.currencyCode}
             </h4>
             {
